--- a/NodeJS_CongNgheMoi_BackEnd_Microservices/config/gateway.config.yml
+++ b/NodeJS_CongNgheMoi_BackEnd_Microservices/config/gateway.config.yml
@@ -1,23 +1,21 @@
 http:
   port: 3000
-admin:
-  port: 9876
   host: 13.229.207.6
 apiEndpoints:
   api:
     host: 13.229.207.6
     paths: '/ip'
   user:
-    host: 54.254.201.191
+    host: 13.229.207.6
     paths: ['/updatepass', '/checksdt', '/dangnhap', '/id=:id', '/sdt=:sdt', '/']
   contact:
-    host: 13.250.34.4
+    host: 13.229.207.6
     paths: ['/getListFriend', '/getlistrequestfriend', '/getTrangThaiFriend','/deleterequest', '/acceptrequest']
 serviceEndpoints:
   httpbin:
     url: 'https://httpbin.org'
   userService:
-    url : 'http://54.254.201.191:4000'
+    url : 'https://54.254.201.191:4000'
   contactService:
     url : 'https://13.250.34.4:5000'
 policies:
