--- a/NodeJS_CongNgheMoi_BackEnd_Microservices/config/gateway.config.yml
+++ b/NodeJS_CongNgheMoi_BackEnd_Microservices/config/gateway.config.yml
@@ -13,7 +13,7 @@ apiEndpoints:
     paths: ['/getListFriend', '/getlistrequestfriend', '/getTrangThaiFriend','/deleterequest', '/acceptrequest', '/sendRequestAddFriend']
   chat:
     host: 13.229.207.6
-    paths: ['/addRoom', '/deleteRoom', '/findIdRoom']
+    paths: ['/addRoom', '/deleteRoom', '/findIdRoom', '/createTable', '/scanFirstItemMessage', '/getAllRoom/id={id}']
 serviceEndpoints:
   httpbin:
     url: 'https://httpbin.org'
