--- a/Chat/package.json
+++ b/Chat/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonpath": "^1.0.2",
+    "mssql": "^6.2.3",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
     "socket.io": "^2.3.0",
