--- a/NodeJS_CongNgheMoi_BackEnd_Microservices/config/gateway.config.yml
+++ b/NodeJS_CongNgheMoi_BackEnd_Microservices/config/gateway.config.yml
@@ -14,7 +14,7 @@ apiEndpoints:
   chat:
     host: 13.229.207.6
     paths: ['/addRoom', '/deleteRoom', '/findIdRoom', '/createTable', '/scanFirstItemMessage', 
-        '/getAllRoom/id=:id', '/upLoadS3', '/createGroup', '/addItemGroup', '/getListGroup=:id', '/checkTruongNhom=:id', '/getListThanhVien=:id']
+        '/getAllRoom/id=:id', '/upLoadS3', '/createGroup', '/addItemGroup', '/getListGroup=:id', '/checkTruongNhom=:id', '/getListThanhVien=:id', '/getAllDsThanhVien=:id']
 serviceEndpoints:
   httpbin:
     url: 'https://httpbin.org'
